// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data table columns Summary column returns eui grid columns with summary column 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [],
    "display": <Memo(UnifiedDataTableSummaryColumnHeader)
      columnDisplayName="Summary"
      headerRowHeight={5}
    />,
    "displayAsText": "Summary",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "_source",
    "isSortable": false,
    "schema": "kibana-json",
    "visibleCellActions": undefined,
  },
]
`;

exports[`Data table columns Textbased languages grid columns returns columns in correct format when column customisation is provided 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <span>
      test
    </span>,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataView="[DataView]"
      headerRowHeight={5}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[`Data table columns column tokens returns eui grid columns with tokens 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": false,
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableTimeColumnHeader)
      dataView="[DataView]"
      dataViewField={
        Object {
          "aggregatable": true,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "timestamp",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": true,
          "subType": undefined,
          "type": "date",
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "timestamp",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "timestamp",
    "initialWidth": 212,
    "isSortable": true,
    "schema": "datetime",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataView="[DataView]"
      headerRowHeight={5}
      showColumnTokens={true}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataView="[DataView]"
      headerRowHeight={5}
      showColumnTokens={true}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": false,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[`Data table columns column tokens returns eui grid columns with tokens for custom column types 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataView="[DataView]"
      headerRowHeight={5}
      showColumnTokens={true}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataView="[DataView]"
      headerRowHeight={5}
      showColumnTokens={true}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": false,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[`Data table columns getEuiGridColumns returns eui grid columns showing default columns 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": false,
      "showMoveLeft": false,
      "showMoveRight": false,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataView="[DataView]"
      headerRowHeight={5}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": false,
      "showMoveLeft": false,
      "showMoveRight": false,
    },
    "cellActions": Array [
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataView="[DataView]"
      headerRowHeight={5}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": false,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[`Data table columns getEuiGridColumns returns eui grid columns with time column 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": false,
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableTimeColumnHeader)
      dataView="[DataView]"
      dataViewField={
        Object {
          "aggregatable": true,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "timestamp",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": true,
          "subType": undefined,
          "type": "date",
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "timestamp",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "timestamp",
    "initialWidth": 212,
    "isSortable": true,
    "schema": "datetime",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataView="[DataView]"
      headerRowHeight={5}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataView="[DataView]"
      headerRowHeight={5}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": false,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[`Data table columns getEuiGridColumns returns eui grid with in memory sorting 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": false,
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableTimeColumnHeader)
      dataView="[DataView]"
      dataViewField={
        Object {
          "aggregatable": true,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "timestamp",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": true,
          "subType": undefined,
          "type": "date",
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "timestamp",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "timestamp",
    "initialWidth": 212,
    "isSortable": true,
    "schema": "datetime",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataView="[DataView]"
      headerRowHeight={5}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copyClipboard",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
          "size": "xs",
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataView="[DataView]"
      headerRowHeight={5}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;
